--- a/Frontend/vercel.json
+++ b/Frontend/vercel.json
@@ -1,3 +1,3 @@
 {
-    "rewrites": [{"soruce": "/(.*)", "destination":"/index.html"}]
+    "rewrites": [{"source": "/(.*)", "destination":"/index.html"}]
 }
